@@ -1,3 +1,8 @@
+2009-12-07  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdMZ.c (TryPostBody): [Bug 2910044]: Close off memory
+	leak in [try] when a variable-free handler clause is present.
+
 2009-12-05  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclBasic.c:   Small changes for clarity in tailcall
